# Robomaster-uav-competition

./: README.md
airsim_ros_pkgs/: CMakeLists.txt
airsim_ros_pkgs/include/: pd_position_controller_simple.h  utils.h
airsim_ros_pkgs/msg/: DesiredStates.msg
geometric_controller/: CMakeLists.txt  package.xml
geometric_controller/config/: traj.rviz
geometric_controller/include/geometric_controller/: geometric_controller.h  geometric_controller_node.h
geometric_controller/launch/: controller_parameters.yaml  planner_parameters.yaml  trajectory_tracking.launch
geometric_controller/src/: geometric_controller.cpp  geometric_controller_node.cpp
plan_and_control/: CMakeLists.txt  package.xml
plan_and_control/config/: controller_gains.yaml  waypoints.yaml
plan_and_control/include/plan_and_control/: trajectory_publisher_node.h  trajectory_replan_node.h  trajectory_tracking_node.h
plan_and_control/launch/: trajectory_replan.launch  trajectory_tracking.launch
plan_and_control/src/: trajectory_publisher_node.cpp  trajectory_replan_node.cpp  trajectory_tracking_node.cpp
tracking_controller/: CMakeLists.txt  package.xml
tracking_controller/include/tracking_controller/: geometric_controller.h
tracking_controller/src/: geometric_controller.cpp
trajectory_generator/: CMakeLists.txt  package.xml
trajectory_generator/include/trajectory_generator/: mini_jerk_traj.h
trajectory_generator/src/: mini_jerk_traj.cpp
trajectory_planning/: CMakeLists.txt  package.xml
trajectory_planning/include/trajectory_planning/: trajectory_planner_waypoints.h  trajectory_publisher_node.h
trajectory_planning/src/: trajectory_planner_waypoints.cpp  trajectory_publisher_node.cpp
uav_msgs/: CMakeLists.txt  package.xml
uav_msgs/msg/: AngleRateThrottle.msg  DesiredStates.msg
